--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@tanstack/react-table": "^8.21.3",
+    "@uploadthing/react": "^7.3.3",
     "axios": "^1.13.1",
     "better-auth": "^1.3.28",
     "lucide-react": "^0.546.0",
@@ -28,6 +29,7 @@
     "recharts": "2.15.4",
     "resend": "^6.2.0",
     "sonner": "^2.0.7",
+    "uploadthing": "^7.7.4",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
